--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
-	<h1> Aqui vamos a hacer el blog del post</h1>
+	<div id="container">
+		<div id="post">
+		<h1> Este es el titulo interesante del post </h1>
+		<p> y este un parrafo de incio donde explico el por que de la vida como la conocemos</p>
+		</div>
+	</div>
 </body>
 </html>
