--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 	<div id="container">
+		<div id="cabecera">
+			Cabecera
+		</div>
 		<div id="post">
 		<h1> Este es el titulo interesante del post </h1>
 		<p> y este un parrafo de incio donde explico el por que de la vida como la conocemos</p>
