--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
-			Cabecera
+			HyperGround<span id="tagline">Tu blog de confianza</span>
 		</div>
 		<div id="post">
 		<h1> Este es el titulo interesante del post </h1>
