--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
-			HyperGround<span id="tagline">Tu blog de confianza</span>
+			HyperGround<span id="tagline">Tu blog maestro</span>
 		</div>
 		<div id="post">
 		<h1> Este es el titulo interesante del post </h1>
 		<p> y este un parrafo de incio donde explico el por que de la vida como la conocemos</p>
 		<p>Este es un segundo parrafo que rellena, en general es tan solo un cambio para comprobar el poder de git, si estas leyendo esto es por que no recuerdas que hiciste, crak, fiera</p>
+		<p>nunca pares de aprender</p>
 		</div>
 	</div>
 </body>
