--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
 <body>
 	<div id="container">
 		<div id="cabecera">
+			<img src="imagenes/dragon.png" id="logo"/>
 			HyperGround<span id="tagline">Tu blog maestro 2.0</span>
 		</div>
 		<div id="post">
