--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
 		<p>Este es un segundo parrafo que rellena, en general es tan solo un cambio para comprobar el poder de git, si estas leyendo esto es por que no recuerdas que hiciste, crak, fiera</p>
 		<p>nunca pares de aprender</p>
 		</div>
+		<div id="fotter">Este es el pie de pagina :3</div>
 	</div>
 </body>
 </html>
